--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ djangorestframework-simplejwt==4.4.0
 drf-nested-routers==0.92
 mysqlclient==2.0.1
 PyJWT==1.7.1
+python-Levenshtein==0.12.0
 pytz==2020.1
 sqlparse==0.4.1
